--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -120,6 +120,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="boardslist_format">/%1$s - %2$s</string>
     <string name="boardslist_hint">Board code</string>
     <string name="boardslist_btn_go">GO</string>
+    <string name="boardslist_favorite_boards">Favorites</string>
+    <string name="boardslist_empty_list">The list is empty</string>
     
     <string name="search_bar_hint">Search</string>
     <string name="search_bar_in_thread_hint">Search in thread</string>
