--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -121,7 +121,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="boardslist_hint">Board code</string>
     <string name="boardslist_btn_go">GO</string>
     <string name="boardslist_favorite_boards">Favoriten</string>
-    <string name="boardslist_empty_list">Die Liste ist leer</string>
+    <string name="boardslist_empty_list">Die Liste der Favoritenboards ist leer</string>
     
     <string name="search_bar_hint">Suche</string>
     <string name="search_bar_in_thread_hint">Suche in Thread</string>
@@ -309,7 +309,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     
     <string name="app_update_checking">Suche nach Updates</string>
     <string name="app_update_update_available">Update verfügbar</string>
-    <string name="app_update_update_dialog_text">Neue Version ist verfügbar: %s\n\nMöchten Sie die Website öffnen?</string>
+    <string name="app_update_update_dialog_text">Neue Version ist verfügbar:\n%s\n\nMöchten Sie die Website öffnen?</string>
     <string name="app_update_update_not_required">Kein Update erforderlich</string>
     <string name="app_update_update_error">Kann nicht nach Updates suchen</string>
     
@@ -469,6 +469,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>Photon</item>
         <item>Neutron</item>
         <item>Gurochan</item>
+        <item>Tomorrow</item>
+        <item>Mikuba</item>
     </string-array>
     <string name="pref_font_size_title">Textgröße</string>
     <string-array name="pref_font_size_choices">
