--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -375,6 +375,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dvach_prefs_domain">Домен</string>
     <string name="dvach_prefs_domain_summary">Резервные адреса: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
     
+    <string name="synch_prefs_domain">Домен</string>
+    <string name="synch_prefs_domain_summary">Резервные адреса: syn-ch.com, syn-ch.org, syn-ch.ru, syn-ch.com.ua</string>
+    
     <string name="infinity_tor_message">Чтобы постить на 8chan через Tor, вы должны использовать .onion домен.</string>
     
     <string name="inach_prefs_ajax_update">JSON обновление</string>
