--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -368,6 +368,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dvach_prefs_domain">Domain</string>
     <string name="dvach_prefs_domain_summary">Reserved domains: 2-chru.net, mirror.2-chru.net, bypass.2-chru.net</string>
     
+    <string name="synch_prefs_domain">Domain</string>
+    <string name="synch_prefs_domain_summary">Reserved domains: syn-ch.com, syn-ch.org, syn-ch.ru, syn-ch.com.ua</string>
+    
     <string name="infinity_tor_message">To post on 8chan over Tor, you must use the .onion domain.</string>
     
     <string name="inach_prefs_ajax_update">JSON Update</string>
