--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -74,6 +74,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item quantity="other">%d neue Posts</item>
     </plurals>
     
+    <string name="attachment_info_size_format">Größe: %s</string>
+    <string name="attachment_info_resolution_format">Auflösung: %1$dx%2$d</string>
+    <string name="attachment_info_original_name_format">Originalnamen: %s</string>
+    
     <string name="tabs_newtab">Neuer Tab</string>
     <string name="tabs_favorites">Favoriten</string>
     <string name="tabs_history">Browserverlauf</string>
@@ -164,6 +168,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="context_menu_reply_with_quote">Mit Zitat antworten</string>
     <string name="context_menu_reply_no_reading">Ohne zu lesen Antworten</string>
     <string name="context_menu_show_thumbnail">Miniaturansicht anzeigen</string>
+    <string name="context_menu_attachment_info">Informationen anzeigen</string>
     <string name="context_menu_download_file">Datei herunterladen</string>
     <string name="context_menu_download_attachment">Anhang herunterladen</string>
     <string name="context_menu_download_attachments">Anhänge herunterladen</string>
