--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -467,7 +467,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_autoupdate_delay_summary">Интервал автообновления, не менее 30 секунд</string>
     <string name="pref_autoupdate_delay_hint">по умолчанию 60 секунд</string>
     <string name="pref_autoupdate_delay_incorrect">Некорректное значение</string>
-    <string name="pref_autoupdate_background_title">Обновление в фоне</string>
+    <string name="pref_autoupdate_background_title">Обновление фоновых вкладок</string>
     <string name="pref_autoupdate_background_summary">Обновлять вкладки, отмеченные для автообновления, в фоновом режиме</string>
     <string name="pref_autoupdate_notification_title">В области уведомлений</string>
     <string name="pref_autoupdate_notification_summary">Не даёт системе закрыть процесс, когда приложение свёрнуто</string>
@@ -481,8 +481,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_about_license_summary">GPLv3</string>
     <string name="pref_download_dir_title">Директория загрузок</string>
     <string name="pref_download_dir_summary">Директория, куда будут скачиваться файлы</string>
-    <string name="pref_download_thumbs_title">Загружать картинки</string>
-    <string name="pref_download_thumbs_summary">Загружать картинки-миниатюры автоматически, отключите для экономии трафика</string>
+    <string name="pref_download_thumbs_title">Загружать миниатюры автоматически</string>
+    <string-array name="pref_download_thumbs_choices">
+        <item>Всегда</item>
+        <item>Только через Wi-Fi</item>
+        <item>Никогда</item>
+    </string-array>
     <string name="pref_download_format_title">Формат сохранения тредов</string>
     <string-array name="pref_download_format_choices">
         <item>Папка с файлами</item>
