--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -451,6 +451,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_replies_only_quantity_summary">Альтернативный способ отображения ссылок на посты</string>
     <string name="pref_gallery_screen_title">Галерея</string>
     <string name="pref_gallery_screen_summary">Дополнительные настройки галереи</string>
+    <string name="pref_gallery_scroll_thread_title">Прокручивать к вложениям</string>
+    <string name="pref_gallery_scroll_thread_summary">Прокручивать тред к постам с вложениями из галереи</string>
     <string name="pref_gallery_scaleimageview_title">Просмотрщик изображений</string>
     <string name="pref_gallery_scaleimageview_summary">Просмотрщик на основе встроенной библиотеки skia</string>
     <string name="pref_gallery_nativegif_title">Просмотрщик GIF файлов</string>
