--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -352,6 +352,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="crash_dialog_comment_prompt">Nachfolgend einen Kommentar zu dem Problem abgeben:</string>
     <string name="crash_dialog_ok_toast">Vielen Dank!</string>
     
+    <string name="kraut_prefs_kompturcode">Kompturcode</string>
+    <string name="kraut_prefs_kompturcode_summary">Kompturcode cookie</string>
+    
     <string name="makaba_catalog_standart">Nach Bump sortieren</string>
     <string name="makaba_catalog_last_reply">Nach Letzten Antworten sortieren</string>
     <string name="makaba_catalog_num">Nach Erstellungsdatum sortieren</string>
