--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -219,6 +219,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dialog_switch_page_go">Gehen</string>
     <string name="dialog_switch_page_incorrect">Ungültige Seitennummer</string>
     
+    <string name="grid_gallery_select">Für das Herunterladen wählen</string>
+    <string name="grid_gallery_download">Herunterladen</string>
+    
     <string name="postform_title_post">Antwort hinzufügen</string>
     <string name="postform_title_thread">Neuer Thread</string>
     <string name="postform_name">Name</string>
