--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -219,6 +219,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dialog_switch_page_go">Go</string>
     <string name="dialog_switch_page_incorrect">Invalid page number</string>
     
+    <string name="grid_gallery_select">Select for downloading</string>
+    <string name="grid_gallery_download">Download</string>
+    
     <string name="postform_title_post">Add a Reply</string>
     <string name="postform_title_thread">New Thread</string>
     <string name="postform_name">Name</string>
